<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProductDetailActivity">
    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="horizontal"
        android:padding="@dimen/dp10">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp3"
            android:paddingRight="@dimen/dp15"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvMedicineName"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_detail"
            android:gravity="top"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_detailNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_below="@+id/layout_title"
        android:visibility="gone"
        >


        <TextView
            android:id="@+id/tv_notFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/product_not_found"
            android:textColor="@color/black"
            android:textSize="@dimen/sp40"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_notFound"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp10"
            android:onClick="tryAgain"
            android:text="@string/try_again"
            android:textColor="@color/white"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_below="@+id/layout_title"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <ImageView
                    android:id="@+id/ivproduct"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitCenter" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardShop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp20">

                        <TextView
                            android:id="@+id/tv_stock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="@dimen/dp16"
                            android:text="@string/available_stock_290"
                            android:textColor="@color/red"
                            android:textSize="@dimen/sp20"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/product_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_stock"
                            android:layout_marginTop="@dimen/dp15"
                            android:layout_marginBottom="@dimen/dp15"
                            android:ellipsize="end"
                            android:justificationMode="inter_word"
                            android:maxLines="20"
                            android:text="@string/description"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp18" />

                        <LinearLayout
                            android:id="@+id/layout_btn"
                            android:layout_width="@dimen/dp130"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/product_detail"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:orientation="horizontal"

                            >

                            <ImageButton
                                android:id="@+id/ibadd"
                                android:layout_width="@dimen/dp40"
                                android:layout_height="@dimen/dp40"
                                android:background="@null"
                                android:foreground="?attr/selectableItemBackground"
                                android:onClick="AddQuantity"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_add_circle" />

                            <TextView
                                android:id="@+id/tvquantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="1"
                                android:textColor="@color/black"
                                android:textSize="@dimen/sp16"
                                android:textStyle="bold" />

                            <ImageButton
                                android:id="@+id/ibminus"
                                android:layout_width="@dimen/dp40"
                                android:layout_height="@dimen/dp40"
                                android:background="@null"
                                android:foreground="?attr/selectableItemBackground"
                                android:onClick="SubQuantity"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_remove_circle" />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/product_detail_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/product_detail"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="@dimen/dp9"
                            android:text="@string/rs_217"
                            android:textColor="@color/red" />

                        <Button
                            android:id="@+id/btnAddtoCart"
                            android:layout_width="@dimen/dp150"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/layout_btn"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp30"
                            android:layout_marginBottom="@dimen/dp20"
                            android:background="@drawable/bg_et"
                            android:gravity="center"
                            android:onClick="showDialog"
                            android:text="@string/order"
                            android:textColor="@color/black" />


                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:orientation="vertical"
                    android:padding="@dimen/dp20">


                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp30"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/tv_Category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jewelry"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp30"
                        />

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:layout_marginTop="@dimen/dp10"
                        android:text="@string/product_rating"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp30"
                        android:textStyle="bold|italic" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:progressTint="@color/white" />


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</RelativeLayout>