<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <ImageView
                android:id="@+id/iv_Back"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/online_store"
                android:textColor="@color/white"
                android:textSize="@dimen/sp38"
                android:textStyle="bold|italic" />

        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/re_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5"
            android:layout_below="@+id/layout_spinner"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_notFound"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        >

        <TextView
            android:id="@+id/tv_notFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:layout_centerInParent="true"
           android:paddingTop="@dimen/dp100"
            android:gravity="center"
            android:text="@string/data_not_found"
            android:textColor="@color/black"
            android:textSize="@dimen/sp40"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_below="@+id/tv_notFound"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp10"
            android:onClick="tryAgain"
            android:text="@string/try_again"
            android:textColor="@color/white"
          />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/load_product"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:orientation="horizontal"
            android:padding="@dimen/dp10"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/bg_outline"
                android:paddingLeft="@dimen/dp10">

                <Spinner
                    android:id="@+id/spinner_linit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp1"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/bg_outline"
                android:paddingLeft="@dimen/dp10">

                <Spinner
                    android:id="@+id/spinner_sort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/re_Products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/re_category"
            android:orientation="horizontal" />

    </LinearLayout>


</LinearLayout>